--- a/W4D3_TimeAndSpace_Rangers_InClass.ipynb
+++ b/W4D3_TimeAndSpace_Rangers_InClass.ipynb
@@ -270,32 +270,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Made of Two Classes\n",
-    "#Node Class\n",
-    "#Link_List Class \n",
+    "# Made of Two Classes \n",
+    "# Node class\n",
+    "# Link_List Class\n",
+    "\n",
+    "# Linked_List class\n",
+    "# --traversal\n",
+    "# --insertion\n",
+    "# --delete\n",
+    "\n",
+    "# Node Class\n",
+    "# --value -- the actual value of the node\n",
+    "# --next -- points to the next node's value\n",
     "\n",
     "class Node():\n",
-    "    def__init__(self, value):\n",
-    "        self.value = value \n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
     "        self.next = None\n",
-    "    \n",
-    "#linked list class\n",
+    "        \n",
+    "#LinkedList Class\n",
+    "\n",
     "class LinkedList():\n",
-    "    def_init_(self):\n",
-    "        self.head = None #begenoing of the linked list\n",
-    "    \n",
-    "\n",
-    "# set the head of or linked list\n",
+    "    def __init__(self):\n",
+    "        self.head = None #beginning of the linked list\n",
+    "        \n",
+    "#    set the head of our linked list\n",
     "    def pushOn(self, new_value):\n",
-    "        new_node = Node(new_value)\n",
+    "        new_node = Node(new_value) #instantiates the Node Class\n",
     "        new_node.next = self.head\n",
-    "        self.head = new_node\n",
-    "\n",
-    "    def deleteNode(self,value):\n",
+    "        self.head = new_node #the head of the linked list now becomes the node object we just instantiated\n",
+    "   \n",
+    "    #delete a node from the linked list   \n",
+    "    def deleteNode(self, value):\n",
     "        current_node = self.head\n",
     "        next_node = current_node.next\n",
-    "\n",
-    "    while current_node.value != value and next_node.next\n",
+    "        \n",
+    "#         traversing our linked list until it finds the value or it reaches the end\n",
+    "        while current_node.value != value and next_node.next:\n",
+    "            prev_node = current_node\n",
+    "            current_node = next_node\n",
+    "            next_node = current_node.next\n",
+    "            \n",
+    "#         we reached the end of the list and have not found our value\n",
+    "        if not next_node.next:\n",
+    "            return \"Value does not exist\"\n",
+    "        \n",
+    "        \n",
+    "        prev_node.next = next_node\n",
+    "        del current_node\n",
+    "        \n",
+    "#     inserting a node into the linked list\n",
+    "    def insertNode(self, position, value):\n",
+    "        new_node = Node(value) #creates an instance of the node class\n",
+    "        \n",
+    "#         setting us up at the beginning of the list\n",
+    "        current_node = self.head\n",
+    "        next_node = current_node.next\n",
+    "        \n",
+    "        for i in range(position - 1):\n",
+    "            current_node = next_node\n",
+    "            next_node = current_node.next\n",
+    "        \n",
+    "        next_node.next = current_node.next\n",
+    "        current_node.next = new_node\n",
+    "        \n",
+    "    def appendNode(self, new_value):\n",
+    "        new_node = Node(new_value) #instantiating our node class\n",
+    "        \n",
+    "        if self.head is None:\n",
+    "            self.head = new_node\n",
+    "            \n",
+    "#         beginning of the list\n",
+    "        current_node = self.head\n",
+    "        \n",
+    "#         traverse until we find the end\n",
+    "#         end will be whenever the node's next is None\n",
+    "        while current_node.next:\n",
+    "            current_node = current_node.next\n",
+    "            \n",
+    "#         add to the back of the list\n",
+    "        current_node.next = new_node\n",
+    "    \n",
+    "    def traverse(self):\n",
+    "        current_node = self.head\n",
+    "        \n",
+    "#         while we still have nodes/values in the list we will print and then move on to the next one\n",
+    "        while current_node:\n",
+    "            print(current_node.value)\n",
+    "            current_node = current_node.next\n",
+    "            \n",
+    "        print(\"end of list\")\n",
     "        "
    ]
   },
@@ -305,7 +369,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Traverse\n"
+    "from collections import deque\n",
+    "\n",
+    "def parts_sums(ls):\n",
+    "    sum = 0\n",
+    "    \n",
+    "    queue = deque()\n",
+    "    \n",
+    "    queue.appendleft(sum)\n",
+    "    \n",
+    "    i = len(ls)-1\n",
+    "    \n",
+    "    while i >= 0:\n",
+    "        sum += ls[i]\n",
+    "        queue.appendleft(sum)\n",
+    "        i -= 1\n",
+    "        \n",
+    "    return list(queue)\n",
+    "\n",
+    "# The time complexity is O(N). \n",
+    "#quese = deque() takes constant time, O(1)\n",
+    "#the loop is also constant time so the overall complexity would be O(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lovefunc( flower1, flower2 ):\n",
+    "    # ...\n",
+    "    if(flower1 %2 == 0 and flower2 %2 !=0) or (flower1 % 2 != 0 and flower2 % 2 == 0):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    flower1 = 4\n",
+    "    flower2 = 7\n",
+    "    \n",
+    "    result = lovefunc(flower1, flower2)\n",
+    "    print(result)\n",
+    "\n",
+    "    # The time complexity is O(1)\n",
+    "    # Since the number of operations does not depend on the size of the inputs (flower1 and flower2), the time complexity remains constant, O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def better_than_average(class_points, your_points):\n",
+    "    #make sure there is an answer in case their is no other results to compare\n",
+    "    if not class_points:\n",
+    "        return True \n",
+    "    #create a function for average\n",
+    "    average_points = sum(class_points) / len(class_points) \n",
+    "    \n",
+    "    return your_points > average_points\n",
+    "\n",
+    "    result = better_than_average(class_points, your_points)\n",
+    "    print(result)\n",
+    "\n",
+    "    # the time complexity of O(N).\n",
+    "    #the sum(class_points) take O(N) since it iterates through all elements in 'class_points' to calculate the sum\n",
+    "    #the len(class_points) takes O(1) time since it retrieves the length of the list."
    ]
   }
  ],
